# thr_infrastructure

./: README.md
thr_action_server/src/thr_actions/: grasp.py
thr_interaction_controller/: CMakeLists.txt  package.xml
thr_interaction_controller/launch/: manual.launch
thr_interaction_controller/scripts/keyboard_interaction_controllers/: keyboard_interaction_controller_concurrent_pobax.py
thr_scene_state_manager/launch/: perception.launch
thr_scenes/config/: scenes.yaml
thr_scenes/config/pobax/: poses.json  tracked_objects.yaml
thr_scenes/notebooks/: update_scene_assistant.ipynb
